--- a/src/epub/text/scene-1.xhtml
+++ b/src/epub/text/scene-1.xhtml
@@ -25,121 +25,115 @@
 					</tr>
 					<tr>
 						<td epub:type="z3998:persona">Seraphim</td>
-						<td>
-							<blockquote epub:type="z3998:hymn">
-								<p>
-									<span>God! God! God!</span>
-									<br/>
-									<span>As flames in skies</span>
-									<br/>
-									<span>We burn and rise</span>
-									<br/>
-									<span>And lose ourselves in Thee!</span>
-									<br/>
-									<span>Years on years!</span>
-									<br/>
-									<span>And nought appears</span>
-									<br/>
-									<span>Save God to be.</span>
-									<br/>
-									<span>God! God! God!</span>
-									<br/>
-									<span>To us no thought</span>
-									<br/>
-									<span>Hath Being brought</span>
-									<br/>
-									<span>Toward Thee that doth not move!</span>
-									<br/>
-									<span>Years on years!</span>
-									<br/>
-									<span>And what appears</span>
-									<br/>
-									<span>Save God to love?</span>
-									<br/>
-									<span>God! God! God!</span>
-									<br/>
-									<span>All Thou dost make</span>
-									<br/>
-									<span>Lies like a lake</span>
-									<br/>
-									<span>Below Thine infinite eye:</span>
-									<br/>
-									<span>Years on years!</span>
-									<br/>
-									<span>And all appears</span>
-									<br/>
-									<span>Save God to die.</span>
-								</p>
-							</blockquote>
+						<td epub:type="z3998:hymn">
+							<p>
+								<span>God! God! God!</span>
+								<br/>
+								<span>As flames in skies</span>
+								<br/>
+								<span>We burn and rise</span>
+								<br/>
+								<span>And lose ourselves in Thee!</span>
+								<br/>
+								<span>Years on years!</span>
+								<br/>
+								<span>And nought appears</span>
+								<br/>
+								<span>Save God to be.</span>
+								<br/>
+								<span>God! God! God!</span>
+								<br/>
+								<span>To us no thought</span>
+								<br/>
+								<span>Hath Being brought</span>
+								<br/>
+								<span>Toward Thee that doth not move!</span>
+								<br/>
+								<span>Years on years!</span>
+								<br/>
+								<span>And what appears</span>
+								<br/>
+								<span>Save God to love?</span>
+								<br/>
+								<span>God! God! God!</span>
+								<br/>
+								<span>All Thou dost make</span>
+								<br/>
+								<span>Lies like a lake</span>
+								<br/>
+								<span>Below Thine infinite eye:</span>
+								<br/>
+								<span>Years on years!</span>
+								<br/>
+								<span>And all appears</span>
+								<br/>
+								<span>Save God to die.</span>
+							</p>
 						</td>
 					</tr>
 					<tr>
 						<td epub:type="z3998:persona">Cherubim</td>
-						<td>
-							<blockquote epub:type="z3998:hymn">
-								<p>
-									<span>As sun and star,</span>
-									<br/>
-									<span>How high or far,</span>
-									<br/>
-									<span>Show but a boundless sky;</span>
-									<br/>
-									<span>So creature mind</span>
-									<br/>
-									<span>Is all confined</span>
-									<br/>
-									<span>To show Thee, God, most High!</span>
-									<br/>
-									<span>The sun still burns,</span>
-									<br/>
-									<span>The sun still turns</span>
-									<br/>
-									<span>Bound, round himself and round;</span>
-									<br/>
-									<span>So creature mind</span>
-									<br/>
-									<span>To self’s confined,</span>
-									<br/>
-									<span>But Thou God hast no bound!</span>
-									<br/>
-									<span>Systems arise.</span>
-									<br/>
-									<span>Or a world dies,</span>
-									<br/>
-									<span>Each constant hour in air;</span>
-									<br/>
-									<span>But creature mind,</span>
-									<br/>
-									<span>In Heaven confined,</span>
-									<br/>
-									<span>Lives on like Thee, God! there.</span>
-								</p>
-							</blockquote>
+						<td epub:type="z3998:hymn">
+							<p>
+								<span>As sun and star,</span>
+								<br/>
+								<span>How high or far,</span>
+								<br/>
+								<span>Show but a boundless sky;</span>
+								<br/>
+								<span>So creature mind</span>
+								<br/>
+								<span>Is all confined</span>
+								<br/>
+								<span>To show Thee, God, most High!</span>
+								<br/>
+								<span>The sun still burns,</span>
+								<br/>
+								<span>The sun still turns</span>
+								<br/>
+								<span>Bound, round himself and round;</span>
+								<br/>
+								<span>So creature mind</span>
+								<br/>
+								<span>To self’s confined,</span>
+								<br/>
+								<span>But Thou God hast no bound!</span>
+								<br/>
+								<span>Systems arise.</span>
+								<br/>
+								<span>Or a world dies,</span>
+								<br/>
+								<span>Each constant hour in air;</span>
+								<br/>
+								<span>But creature mind,</span>
+								<br/>
+								<span>In Heaven confined,</span>
+								<br/>
+								<span>Lives on like Thee, God! there.</span>
+							</p>
 						</td>
 					</tr>
 					<tr class="together">
 						<td epub:type="z3998:persona">Seraphim<br/>
 						Cherubim</td>
-						<td>
-							<blockquote epub:type="z3998:hymn">
-								<p>
-									<span>God! God! God!</span>
-									<br/>
-									<span>Thou fill’st our eyes</span>
-									<br/>
-									<span>A were the skies</span>
-									<br/>
-									<span>One burning, boundless sun!</span>
-									<br/>
-									<span>While creature mind,</span>
-									<br/>
-									<span>In path confined,</span>
-									<br/>
-									<span>Passeth a spot thereon.</span>
-									<br/>
-									<span>God! God! God!</span>
-								</p>
-							</blockquote>
+						<td epub:type="z3998:hymn">
+							<p>
+								<span>God! God! God!</span>
+								<br/>
+								<span>Thou fill’st our eyes</span>
+								<br/>
+								<span>A were the skies</span>
+								<br/>
+								<span>One burning, boundless sun!</span>
+								<br/>
+								<span>While creature mind,</span>
+								<br/>
+								<span>In path confined,</span>
+								<br/>
+								<span>Passeth a spot thereon.</span>
+								<br/>
+								<span>God! God! God!</span>
+							</p>
 						</td>
 					</tr>
 					<tr>
@@ -346,22 +340,20 @@
 					</tr>
 					<tr>
 						<td epub:type="z3998:persona">Saints</td>
-						<td>
-							<blockquote epub:type="z3998:hymn">
-								<p>
-									<span class="i2">Another soul</span>
-									<br/>
-									<span class="i2">The Holy one</span>
-									<br/>
-									<span>Hath chosen out of earth;</span>
-									<br/>
-									<span class="i2">And there is none</span>
-									<br/>
-									<span class="i2">Throughout the whole</span>
-									<br/>
-									<span>Like worthy of his birth.</span>
-								</p>
-							</blockquote>
+						<td epub:type="z3998:hymn">
+							<p>
+								<span class="i2">Another soul</span>
+								<br/>
+								<span class="i2">The Holy one</span>
+								<br/>
+								<span>Hath chosen out of earth;</span>
+								<br/>
+								<span class="i2">And there is none</span>
+								<br/>
+								<span class="i2">Throughout the whole</span>
+								<br/>
+								<span>Like worthy of his birth.</span>
+							</p>
 						</td>
 					</tr>
 					<tr>
@@ -1058,60 +1050,56 @@
 					</tr>
 					<tr>
 						<td epub:type="z3998:persona">Angels</td>
-						<td>
-							<blockquote epub:type="z3998:hymn">
-								<p>
-									<span>Thee God! we praise</span>
-									<br/>
-									<span>Through our ne’er sunsetting days,</span>
-									<br/>
-									<span>And Thy just ways,</span>
-									<br/>
-									<span>Divine:</span>
-									<br/>
-									<span>In Thy hand is every spirit,</span>
-									<br/>
-									<span>And the meed the same may merit;</span>
-									<br/>
-									<span>All which all the worlds inherit</span>
-									<br/>
-									<span>Are Thine!</span>
-									<br/>
-									<span>It is not unto creatures given</span>
-									<br/>
-									<span>To scale the purposes of Heaven,</span>
-									<br/>
-									<span>Alway just and kind;</span>
-									<br/>
-									<span>But before Thy mighty breath,</span>
-									<br/>
-									<span>Life and spirit, dust and death,</span>
-									<br/>
-									<span>The boundless All is driven,</span>
-									<br/>
-									<span>Like clouds by wind.</span>
-								</p>
-							</blockquote>
+						<td epub:type="z3998:hymn">
+							<p>
+								<span>Thee God! we praise</span>
+								<br/>
+								<span>Through our ne’er sunsetting days,</span>
+								<br/>
+								<span>And Thy just ways,</span>
+								<br/>
+								<span>Divine:</span>
+								<br/>
+								<span>In Thy hand is every spirit,</span>
+								<br/>
+								<span>And the meed the same may merit;</span>
+								<br/>
+								<span>All which all the worlds inherit</span>
+								<br/>
+								<span>Are Thine!</span>
+								<br/>
+								<span>It is not unto creatures given</span>
+								<br/>
+								<span>To scale the purposes of Heaven,</span>
+								<br/>
+								<span>Alway just and kind;</span>
+								<br/>
+								<span>But before Thy mighty breath,</span>
+								<br/>
+								<span>Life and spirit, dust and death,</span>
+								<br/>
+								<span>The boundless All is driven,</span>
+								<br/>
+								<span>Like clouds by wind.</span>
+							</p>
 						</td>
 					</tr>
 					<tr>
 						<td epub:type="z3998:persona">Angel of Earth</td>
-						<td>
-							<blockquote epub:type="z3998:hymn">
-								<p>
-									<span>Woe! woe at last in Heaven!</span>
-									<br/>
-									<span>Earth to death is given;</span>
-									<br/>
-									<span>The ends of things hang still</span>
-									<br/>
-									<span>Over them as a sky;</span>
-									<br/>
-									<span>Do what we will,</span>
-									<br/>
-									<span>All’s for eternity!</span>
-								</p>
-							</blockquote>
+						<td epub:type="z3998:hymn">
+							<p>
+								<span>Woe! woe at last in Heaven!</span>
+								<br/>
+								<span>Earth to death is given;</span>
+								<br/>
+								<span>The ends of things hang still</span>
+								<br/>
+								<span>Over them as a sky;</span>
+								<br/>
+								<span>Do what we will,</span>
+								<br/>
+								<span>All’s for eternity!</span>
+							</p>
 						</td>
 					</tr>
 				</tbody>
