--- a/src/epub/text/scene-18.xhtml
+++ b/src/epub/text/scene-18.xhtml
@@ -19,16 +19,14 @@
 					</tr>
 					<tr>
 						<td epub:type="z3998:persona">The Archangels</td>
-						<td>
-							<blockquote epub:type="z3998:hymn">
-								<p>
-									<span>Infinite God! Thy will is done:</span>
-									<br/>
-									<span>The world’s last sand is all but run:</span>
-									<br/>
-									<span>The night is feeding on the sun.</span>
-								</p>
-							</blockquote>
+						<td epub:type="z3998:hymn">
+							<p>
+								<span>Infinite God! Thy will is done:</span>
+								<br/>
+								<span>The world’s last sand is all but run:</span>
+								<br/>
+								<span>The night is feeding on the sun.</span>
+							</p>
 						</td>
 					</tr>
 					<tr>
