--- a/src/epub/text/scene-22.xhtml
+++ b/src/epub/text/scene-22.xhtml
@@ -255,158 +255,156 @@
 					</tr>
 					<tr>
 						<td epub:type="z3998:persona">Angel of Earth</td>
-						<td>
-							<blockquote epub:type="z3998:hymn">
-								<p>
-									<span class="i2">Star, stars!</span>
-									<br/>
-									<span class="i2">Stop your bright cars!</span>
-									<br/>
-									<span class="i2">Stint your breath⁠—</span>
-									<br/>
-									<span class="i2">Repent ere worse⁠—</span>
-									<br/>
-									<span>Think of the death</span>
-									<br/>
-									<span>Of the universe.</span>
-									<br/>
-									<span>Fear doom, and fear,</span>
-									<br/>
-									<span>The fate of your kin-sphere.</span>
-									<br/>
-									<span>As a corse in the tomb,</span>
-									<br/>
-									<span>Earth! thou art laid in doom:</span>
-									<br/>
-									<span>The worm is at thy heart.</span>
-									<br/>
-									<span>I see all things part:⁠—</span>
-									<br/>
-									<span>The bright air thicken,</span>
-									<br/>
-									<span>Thunder-stricken:</span>
-									<br/>
-									<span>Birds from the sky</span>
-									<br/>
-									<span>Shower like leaves:</span>
-									<br/>
-									<span>Streamlets stop</span>
-									<br/>
-									<span>Like ice on leaves:</span>
-									<br/>
-									<span>The sun go blind:</span>
-									<br/>
-									<span>Swoon the wind</span>
-									<br/>
-									<span>On the high hill top⁠—</span>
-									<br/>
-									<span>Swoon and die:</span>
-									<br/>
-									<span>Earth rear off her cities</span>
-									<br/>
-									<span>As a horse his rider;</span>
-									<br/>
-									<span>And still, with each death-strain,</span>
-									<br/>
-									<span>Her heart-wound tear wider:</span>
-									<br/>
-									<span>The lion roar and die</span>
-									<br/>
-									<span>With his eye-balls on the sky:</span>
-									<br/>
-									<span>The eagle scream</span>
-									<br/>
-									<span>And drop like a beam:</span>
-									<br/>
-									<span>Men crowd and cry,</span>
-									<br/>
-									<span>Out on this deathful dream!</span>
-									<br/>
-									<span>A low dull sound⁠—</span>
-									<br/>
-									<span>’Tis the march of many bones</span>
-									<br/>
-									<span>Under ground;</span>
-									<br/>
-									<span>Up! and they fling,</span>
-									<br/>
-									<span>Like a fly’s wing,</span>
-									<br/>
-									<span>Off them the grey grave-stones;</span>
-									<br/>
-									<span>They sit in their biers⁠—</span>
-									<br/>
-									<span>Father and mother,</span>
-									<br/>
-									<span>Man and wife,</span>
-									<br/>
-									<span>Sister and brother,</span>
-									<br/>
-									<span>As in life;</span>
-									<br/>
-									<span>Lady and lover⁠—</span>
-									<br/>
-									<span>Love all over.</span>
-									<br/>
-									<span>Their flesh re-appears⁠—</span>
-									<br/>
-									<span>Their hearts beat⁠—</span>
-									<br/>
-									<span>Their eyes have tears:</span>
-									<br/>
-									<span>Woe! woe!</span>
-									<br/>
-									<span>Do they speak?</span>
-									<br/>
-									<span>Stir? No!</span>
-									<br/>
-									<span>Tongues were too weak,</span>
-									<br/>
-									<span>Save to repeat</span>
-									<br/>
-									<span>Woe!</span>
-									<br/>
-									<span>But they smile</span>
-									<br/>
-									<span>In a while;</span>
-									<br/>
-									<span>For to wipe from His word</span>
-									<br/>
-									<span>The dust of years,</span>
-									<br/>
-									<span>He comes! he comes! the Lord,</span>
-									<br/>
-									<span>Man-God, re-appears;</span>
-									<br/>
-									<span>To bless, and to save</span>
-									<br/>
-									<span>From death and the grave⁠—</span>
-									<br/>
-									<span>To redeem and deliver</span>
-									<br/>
-									<span>For ever and ever!</span>
-									<br/>
-									<span>The dead rise⁠—</span>
-									<br/>
-									<span>Death dies.</span>
-									<br/>
-									<span>Go, Time, and sink</span>
-									<br/>
-									<span>Thy great thoughts in the sea!</span>
-									<br/>
-									<span>And quench thy red link!</span>
-									<br/>
-									<span>Let him flutter to rest</span>
-									<br/>
-									<span>On thy God-nursing breast,</span>
-									<br/>
-									<span>Eternity!</span>
-									<br/>
-									<span>Mother Eternity!</span>
-									<br/>
-									<span>What is for me?</span>
-								</p>
-							</blockquote>
+						<td epub:type="z3998:hymn">
+							<p>
+								<span class="i2">Star, stars!</span>
+								<br/>
+								<span class="i2">Stop your bright cars!</span>
+								<br/>
+								<span class="i2">Stint your breath⁠—</span>
+								<br/>
+								<span class="i2">Repent ere worse⁠—</span>
+								<br/>
+								<span>Think of the death</span>
+								<br/>
+								<span>Of the universe.</span>
+								<br/>
+								<span>Fear doom, and fear,</span>
+								<br/>
+								<span>The fate of your kin-sphere.</span>
+								<br/>
+								<span>As a corse in the tomb,</span>
+								<br/>
+								<span>Earth! thou art laid in doom:</span>
+								<br/>
+								<span>The worm is at thy heart.</span>
+								<br/>
+								<span>I see all things part:⁠—</span>
+								<br/>
+								<span>The bright air thicken,</span>
+								<br/>
+								<span>Thunder-stricken:</span>
+								<br/>
+								<span>Birds from the sky</span>
+								<br/>
+								<span>Shower like leaves:</span>
+								<br/>
+								<span>Streamlets stop</span>
+								<br/>
+								<span>Like ice on leaves:</span>
+								<br/>
+								<span>The sun go blind:</span>
+								<br/>
+								<span>Swoon the wind</span>
+								<br/>
+								<span>On the high hill top⁠—</span>
+								<br/>
+								<span>Swoon and die:</span>
+								<br/>
+								<span>Earth rear off her cities</span>
+								<br/>
+								<span>As a horse his rider;</span>
+								<br/>
+								<span>And still, with each death-strain,</span>
+								<br/>
+								<span>Her heart-wound tear wider:</span>
+								<br/>
+								<span>The lion roar and die</span>
+								<br/>
+								<span>With his eye-balls on the sky:</span>
+								<br/>
+								<span>The eagle scream</span>
+								<br/>
+								<span>And drop like a beam:</span>
+								<br/>
+								<span>Men crowd and cry,</span>
+								<br/>
+								<span>Out on this deathful dream!</span>
+								<br/>
+								<span>A low dull sound⁠—</span>
+								<br/>
+								<span>’Tis the march of many bones</span>
+								<br/>
+								<span>Under ground;</span>
+								<br/>
+								<span>Up! and they fling,</span>
+								<br/>
+								<span>Like a fly’s wing,</span>
+								<br/>
+								<span>Off them the grey grave-stones;</span>
+								<br/>
+								<span>They sit in their biers⁠—</span>
+								<br/>
+								<span>Father and mother,</span>
+								<br/>
+								<span>Man and wife,</span>
+								<br/>
+								<span>Sister and brother,</span>
+								<br/>
+								<span>As in life;</span>
+								<br/>
+								<span>Lady and lover⁠—</span>
+								<br/>
+								<span>Love all over.</span>
+								<br/>
+								<span>Their flesh re-appears⁠—</span>
+								<br/>
+								<span>Their hearts beat⁠—</span>
+								<br/>
+								<span>Their eyes have tears:</span>
+								<br/>
+								<span>Woe! woe!</span>
+								<br/>
+								<span>Do they speak?</span>
+								<br/>
+								<span>Stir? No!</span>
+								<br/>
+								<span>Tongues were too weak,</span>
+								<br/>
+								<span>Save to repeat</span>
+								<br/>
+								<span>Woe!</span>
+								<br/>
+								<span>But they smile</span>
+								<br/>
+								<span>In a while;</span>
+								<br/>
+								<span>For to wipe from His word</span>
+								<br/>
+								<span>The dust of years,</span>
+								<br/>
+								<span>He comes! he comes! the Lord,</span>
+								<br/>
+								<span>Man-God, re-appears;</span>
+								<br/>
+								<span>To bless, and to save</span>
+								<br/>
+								<span>From death and the grave⁠—</span>
+								<br/>
+								<span>To redeem and deliver</span>
+								<br/>
+								<span>For ever and ever!</span>
+								<br/>
+								<span>The dead rise⁠—</span>
+								<br/>
+								<span>Death dies.</span>
+								<br/>
+								<span>Go, Time, and sink</span>
+								<br/>
+								<span>Thy great thoughts in the sea!</span>
+								<br/>
+								<span>And quench thy red link!</span>
+								<br/>
+								<span>Let him flutter to rest</span>
+								<br/>
+								<span>On thy God-nursing breast,</span>
+								<br/>
+								<span>Eternity!</span>
+								<br/>
+								<span>Mother Eternity!</span>
+								<br/>
+								<span>What is for me?</span>
+							</p>
 						</td>
 					</tr>
 					<tr>
