--- a/src/epub/text/scene-31.xhtml
+++ b/src/epub/text/scene-31.xhtml
@@ -53,32 +53,30 @@
 					</tr>
 					<tr>
 						<td epub:type="z3998:persona">Angel of Earth</td>
-						<td>
-							<blockquote epub:type="z3998:hymn">
-								<p>
-									<span>On! on! my world again!</span>
-									<br/>
-									<span class="i1">Away we fly</span>
-									<br/>
-									<span class="i1">Through Heaven’s blue plain,</span>
-									<br/>
-									<span class="i1">Like thought through the eye.</span>
-									<br/>
-									<span>Ye angels keep your Heaven!</span>
-									<br/>
-									<span class="i1">I, Earth!</span>
-									<br/>
-									<span>For that with God I have striven,</span>
-									<br/>
-									<span class="i1">And have prevailed.</span>
-									<br/>
-									<span class="i1">I come once more,</span>
-									<br/>
-									<span class="i1">I come to thee, Earth!</span>
-									<br/>
-									<span class="i1">Like a ship to shore.</span>
-								</p>
-							</blockquote>
+						<td epub:type="z3998:hymn">
+							<p>
+								<span>On! on! my world again!</span>
+								<br/>
+								<span class="i1">Away we fly</span>
+								<br/>
+								<span class="i1">Through Heaven’s blue plain,</span>
+								<br/>
+								<span class="i1">Like thought through the eye.</span>
+								<br/>
+								<span>Ye angels keep your Heaven!</span>
+								<br/>
+								<span class="i1">I, Earth!</span>
+								<br/>
+								<span>For that with God I have striven,</span>
+								<br/>
+								<span class="i1">And have prevailed.</span>
+								<br/>
+								<span class="i1">I come once more,</span>
+								<br/>
+								<span class="i1">I come to thee, Earth!</span>
+								<br/>
+								<span class="i1">Like a ship to shore.</span>
+							</p>
 						</td>
 					</tr>
 					<tr>
