--- a/src/epub/text/scene-36.xhtml
+++ b/src/epub/text/scene-36.xhtml
@@ -403,74 +403,72 @@
 					</tr>
 					<tr>
 						<td epub:type="z3998:persona">The Saved</td>
-						<td>
-							<blockquote epub:type="z3998:hymn">
-								<p>
-									<span>Father of goodness,</span>
-									<br/>
-									<span>Son of love,</span>
-									<br/>
-									<span>Spirit of comfort,</span>
-									<br/>
-									<span>Be with us!</span>
-									<br/>
-									<span>God who hast made us,</span>
-									<br/>
-									<span>God who hast saved,</span>
-									<br/>
-									<span>God who hast judged us,</span>
-									<br/>
-									<span>Thee we praise.</span>
-									<br/>
-									<span>Heaven our spirits,</span>
-									<br/>
-									<span>Hallow our hearts;</span>
-									<br/>
-									<span>Let us have God-light</span>
-									<br/>
-									<span>Endlessly.</span>
-									<br/>
-									<span>Ours is the wide world,</span>
-									<br/>
-									<span>Heaven on Heaven;</span>
-									<br/>
-									<span>What have we done, Lord,</span>
-									<br/>
-									<span>Worthy this?</span>
-									<br/>
-									<span>Oh! we have loved Thee;</span>
-									<br/>
-									<span>That alone</span>
-									<br/>
-									<span>Maketh our glory,</span>
-									<br/>
-									<span>Duty, meed.</span>
-									<br/>
-									<span>Oh! we have loved Thee!</span>
-									<br/>
-									<span>Love we will,</span>
-									<br/>
-									<span>Ever, and every</span>
-									<br/>
-									<span>Soul of us.</span>
-									<br/>
-									<span>God of the saved,</span>
-									<br/>
-									<span>God of the tried,</span>
-									<br/>
-									<span>God of the lost ones,</span>
-									<br/>
-									<span>Be with all!</span>
-									<br/>
-									<span>Let us he near Thee</span>
-									<br/>
-									<span>Ever and aye;</span>
-									<br/>
-									<span>Oh! let us love Thee</span>
-									<br/>
-									<span>Infinite!</span>
-								</p>
-							</blockquote>
+						<td epub:type="z3998:hymn">
+							<p>
+								<span>Father of goodness,</span>
+								<br/>
+								<span>Son of love,</span>
+								<br/>
+								<span>Spirit of comfort,</span>
+								<br/>
+								<span>Be with us!</span>
+								<br/>
+								<span>God who hast made us,</span>
+								<br/>
+								<span>God who hast saved,</span>
+								<br/>
+								<span>God who hast judged us,</span>
+								<br/>
+								<span>Thee we praise.</span>
+								<br/>
+								<span>Heaven our spirits,</span>
+								<br/>
+								<span>Hallow our hearts;</span>
+								<br/>
+								<span>Let us have God-light</span>
+								<br/>
+								<span>Endlessly.</span>
+								<br/>
+								<span>Ours is the wide world,</span>
+								<br/>
+								<span>Heaven on Heaven;</span>
+								<br/>
+								<span>What have we done, Lord,</span>
+								<br/>
+								<span>Worthy this?</span>
+								<br/>
+								<span>Oh! we have loved Thee;</span>
+								<br/>
+								<span>That alone</span>
+								<br/>
+								<span>Maketh our glory,</span>
+								<br/>
+								<span>Duty, meed.</span>
+								<br/>
+								<span>Oh! we have loved Thee!</span>
+								<br/>
+								<span>Love we will,</span>
+								<br/>
+								<span>Ever, and every</span>
+								<br/>
+								<span>Soul of us.</span>
+								<br/>
+								<span>God of the saved,</span>
+								<br/>
+								<span>God of the tried,</span>
+								<br/>
+								<span>God of the lost ones,</span>
+								<br/>
+								<span>Be with all!</span>
+								<br/>
+								<span>Let us he near Thee</span>
+								<br/>
+								<span>Ever and aye;</span>
+								<br/>
+								<span>Oh! let us love Thee</span>
+								<br/>
+								<span>Infinite!</span>
+							</p>
 						</td>
 					</tr>
 					<tr>
