[Editorial] particolor -> parti-color

--- a/src/epub/text/scene-19.xhtml
+++ b/src/epub/text/scene-19.xhtml
@@ -725,7 +725,7 @@
 								<br/>
 								<span>Have walked with through their winged worlds of light,</span>
 								<br/>
-								<span>Double and triple particoloured suns,</span>
+								<span>Double and triple parti-coloured suns,</span>
 								<br/>
 								<span>And systems circling each the other, clad</span>
 								<br/>
