--- a/src/epub/text/scene-4.xhtml
+++ b/src/epub/text/scene-4.xhtml
@@ -969,7 +969,7 @@
 								<br/>
 								<span>Which thou dost boast so much of, why, thou see’st</span>
 								<br/>
-								<span>’Tis but the particoloured, scummy dross</span>
+								<span>’Tis but the parti-coloured, scummy dross</span>
 								<br/>
 								<span>Of the original element wherefrom</span>
 								<br/>
