--- a/src/epub/text/scene-9.xhtml
+++ b/src/epub/text/scene-9.xhtml
@@ -2451,7 +2451,7 @@
 								<br/>
 								<span>The things beneath it, which it lights to death.</span>
 								<br/>
-								<span>Well, farewell, <abbr>Mr.</abbr> Student. May you never</span>
+								<span>Well, farewell, <abbr epub:type="z3998:name-title">Mr.</abbr> Student. May you never</span>
 								<br/>
 								<span>Regret those hours which make the mind, if they</span>
 								<br/>
