--- a/src/epub/text/scene-21.xhtml
+++ b/src/epub/text/scene-21.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction z3998:drama">
-		<section id="scene-21" epub:type="chapter z3998:scene">
+		<section id="scene-21" epub:type="z3998:scene">
 			<h2 epub:type="ordinal z3998:roman">XXI</h2>
 			<p>Scene⁠—Garden and bower by the sea.</p>
 			<table>
