--- a/src/epub/text/scene-33.xhtml
+++ b/src/epub/text/scene-33.xhtml
@@ -407,7 +407,7 @@
 							<p>
 								<span>’Tis God speaks. Let us hence.</span>
 								<br/>
-								<span>The general judgment is m hand⁠—God’s hand.</span>
+								<span>The general judgment is in hand⁠—God’s hand.</span>
 								<br/>
 								<span>The souls of those whom God loves circle us.</span>
 								<br/>
