--- a/src/epub/text/scene-16.xhtml
+++ b/src/epub/text/scene-16.xhtml
@@ -29,7 +29,7 @@
 								<br/>
 								<span>Dips o’er the grave!</span>
 								<br/>
-								<span>What, though for m no music thrill,</span>
+								<span>What, though for in no music thrill,</span>
 								<br/>
 								<span>Nor mirth delight, nor beauty move;</span>
 								<br/>
