[Editorial] Modernize several hyphenated words

--- a/src/epub/text/scene-9.xhtml
+++ b/src/epub/text/scene-9.xhtml
@@ -1482,7 +1482,7 @@
 					<tr>
 						<td/>
 						<td>
-							<i epub:type="z3998:stage-direction">They pass some card-players.</i>
+							<i epub:type="z3998:stage-direction">They pass some cardplayers.</i>
 						</td>
 					</tr>
 					<tr>
