--- a/src/epub/text/scene-14.xhtml
+++ b/src/epub/text/scene-14.xhtml
@@ -439,13 +439,13 @@
 								<br/>
 								<span>There, in the eye of God again to burn,</span>
 								<br/>
-								<span>Ab all man’s glory unto God’s must turn.</span>
+								<span>As all man’s glory unto God’s must turn.</span>
 								<br/>
 								<span>And so may sunbeams ever guide his pen,</span>
 								<br/>
 								<span>And God his heart, who lights the morn of men;</span>
 								<br/>
-								<span>For this life is but Being.s first faint ray;</span>
+								<span>For this life is but Being’s first faint ray;</span>
 								<br/>
 								<span>And sun on sun, and heaven on heaven, make up God’s day.</span>
 								<br/>
