--- a/src/epub/text/scene-15.xhtml
+++ b/src/epub/text/scene-15.xhtml
@@ -491,7 +491,7 @@
 								<br/>
 								<span>Which could from Heaven my soul to thee beguile;</span>
 								<br/>
-								<span>As I mine eye would.turn from awful skies</span>
+								<span>As I mine eye would turn from awful skies</span>
 								<br/>
 								<span>To hail the child of sun and storm arise;</span>
 								<br/>
