--- a/src/epub/text/scene-3.xhtml
+++ b/src/epub/text/scene-3.xhtml
@@ -119,7 +119,7 @@
 								<br/>
 								<span>Than men imagine. They overlook the mass,</span>
 								<br/>
-								<span>But fasten each on so.me particular crumb,</span>
+								<span>But fasten each on some particular crumb,</span>
 								<br/>
 								<span>Because they feel that they can equal that,</span>
 								<br/>
