--- a/src/epub/text/scene-20.xhtml
+++ b/src/epub/text/scene-20.xhtml
@@ -679,7 +679,7 @@
 								<br/>
 								<span>Been such a day as that, thou knowest, when first</span>
 								<br/>
-								<span>I said t loved thee; that long, sunny day</span>
+								<span>I said I loved thee; that long, sunny day</span>
 								<br/>
 								<span>We passed upon the waters⁠—heeding nought,</span>
 								<br/>
