--- a/src/epub/text/scene-13.xhtml
+++ b/src/epub/text/scene-13.xhtml
@@ -125,7 +125,7 @@
 								<br/>
 								<span>Blind equally the eye. Thou mayst yet rise</span>
 								<br/>
-								<span>And fall as o ea as the sea.</span>
+								<span>And fall as often as the sea.</span>
 							</p>
 						</td>
 					</tr>
