--- a/src/epub/text/scene-15.xhtml
+++ b/src/epub/text/scene-15.xhtml
@@ -1700,7 +1700,7 @@
 						<td epub:type="z3998:persona">Festus</td>
 						<td epub:type="z3998:verse">
 							<p>
-								<span>Our hearts e not in our own hands:</span>
+								<span>Our hearts are not in our own hands:</span>
 								<br/>
 								<span>Why wilt thou make me say</span>
 								<br/>
