--- a/src/epub/text/scene-20.xhtml
+++ b/src/epub/text/scene-20.xhtml
@@ -4265,7 +4265,7 @@
 								<br/>
 								<span>Dry up like dew-drops. But of this enough;</span>
 								<br/>
-								<span>I mean that h must weigh himself as he</span>
+								<span>I mean that he must weigh himself as he</span>
 								<br/>
 								<span>Will be weighed after by posterity;</span>
 								<br/>
